fix buttons's align

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -34,7 +34,7 @@ span{
 }
 
 .button{
-  display: block;
+  display: inline-block;
   width: 100px;
   font-family: Arial;
   color: #ffffff;
